# sitewatcher

./: .gitignore  README.md  TAGS  sitewatcher.cabal  sitewatcher.db
src/: Main.hs  Scraper.hs  Website.hs  test.db
