name:                sitewatcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sitewatcher#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sitewatcher
  hs-source-dirs:      src
  other-modules:       Website,
                       Scraper
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sqlite-simple,
                       time,
                       yaml,
                       text,
                       scalpel,
                       curl,
                       hashable >= 1.2
